versioned_docs/version-2025.2.1/professor/franciele_fernandes_baliero.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Franciele Fernandes Baliero",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física 2 - 170",
          "size": 1,
          "teachers": [
            "Kleber Augusto Michalichem",
            "Franciele Fernandes Baliero"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "EIN2024"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Educação Física II - 2419",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero",
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "COM2024"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física I - 1072",
          "size": 2,
          "teachers": [
            "Kleber Augusto Michalichem",
            "Franciele Fernandes Baliero"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
        ,
        {
          "subject": "Educação Física I - 2323",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero",
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "COM2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
        
,
        {
          "subject": "Educação Física I - 2323",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero",
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "COM2025"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
,
        {
          "subject": "Educação Física II - 2419",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero",
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "COM2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
        
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física 1 - 123",
          "size": 1,
          "teachers": [
            "Kleber Augusto Michalichem",
            "Franciele Fernandes Baliero"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "EIN2025"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Educação Física 3 - 203",
          "size": 1,
          "teachers": [
            "Kleber Augusto Michalichem",
            "Franciele Fernandes Baliero"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "EIN2023"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Metodologia Científica e Técnicas de Apresentação de Trabalhos - 1466",
          "size": 2,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "laboratorio_de_informatica_b",
          "students": [
            "AGR2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Educação Física II - 1227",
          "size": 2,
          "teachers": [
            "Kleber Augusto Michalichem",
            "Franciele Fernandes Baliero"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "IIW2024A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }

      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Franciele Fernandes Baliero

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
